--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "tslint --project .",
-    "test":"jest"
+    "lint": "eslint \"src/**\"",
+    "test": "jest"
   },
   "repository": "https://github.com/aredwood/typescript-quickstart.git",
   "author": "Alex Redwood <aredwood@users.noreply.github.com>",
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "@types/jest": "^24.0.25",
     "jest": "^24.9.0",
-    "ts-jest": "^24.2.0"
+    "ts-jest": "^24.2.0",
+    "eslint": "^6.8.0",
+    "typescript": "^3.7.4"
   }
 }
