--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build-watch":"tsc --watch",
     "lint": "eslint \"src/**\"",
-    "test": "jest"
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-coverage": "jest --coverage",
+    "launch": "node -r dotenv/config ./dist/index.js",
+    "start":"nodemon ./dist/index.js"
   },
   "repository": "https://github.com/aredwood/typescript-quickstart.git",
   "author": "Alex Redwood <aredwood@users.noreply.github.com>",
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@types/express": "^4.17.2",
+    "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.25",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "@types/jest": "^24.0.25",
+    "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
-    "eslint": "^6.8.0",
     "typescript": "^3.7.4"
   }
 }
